--- a/view/sale_form.xml
+++ b/view/sale_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- This file is part sale_pos module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <form string="Pos Cash Sales" col="4">
     <field name="lines" colspan="2"
         view_ids="sale_pos.sale_line_view_tree,sale_pos.sale_line_view_form"/>
