--- a/view/sale_line_tree.xml
+++ b/view/sale_line_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- This file is part sale_pos module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <tree string="Lines" editable="bottom">
     <field name="product"/>
     <field name="quantity"/>
