--- a/view/sale_payment_form.xml
+++ b/view/sale_payment_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- This file is part sale_pos module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <form string="Sale Payment Form">
     <label name="journal"/>
     <field name="journal" widget="selection"/>
