--- a/view/sale_payment_form.xml
+++ b/view/sale_payment_form.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
-The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
+     The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
 <form string="Sale Payment Form">
+    <label id="self_pick_up_note1" colspan="4" xalign="0.0"
+        states="{'invisible': ~Eval('self_pick_up', False)}"
+        string="If you pay the entire amount, it will process this sale, moving the products without shipment and invoicing it."/>
+    <label id="self_pick_up_note2" colspan="4" xalign="0.0"
+        states="{'invisible': ~Eval('self_pick_up', False)}"
+        string="If you want to manage the sale step by step or generate a shipment to manage the delivery, uncheck the Self Pick Up field in Sale's form and use the buttons in the bottom line."/>
+    <separator id="workflow_notes" colspan="4"
+        states="{'invisible': ~Eval('self_pick_up', False)}"/>
     <label name="journal"/>
     <field name="journal" widget="selection"/>
     <label name="payment_amount"/>
     <field name="payment_amount"/>
+    <label name="party"/>
+    <field name="party"/>
+    <label name="self_pick_up"/>
+    <field name="self_pick_up"/>
 </form>
