--- a/view/sale_line_form.xml
+++ b/view/sale_line_form.xml
@@ -16,5 +16,7 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
     <field name="unit_price_w_tax"/>
     <label name="amount_w_tax"/>
     <field name="amount_w_tax"/>
+    <label name="delivery_date"/>
+    <field name="delivery_date"/>
     <field name="taxes" colspan="4" readonly="1"/>
 </form>
