--- a/view/sale_form.xml
+++ b/view/sale_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <form string="Pos Cash Sales" col="4">
     <field name="lines" colspan="2"
-        view_ids="sale_pos.sale_line_view_tree,sale_pos.sale_line_view_form"/>
+        view_ids="sale_pos.sale_line_view_tree,sale.sale_line_view_form"/>
     <notebook colspan="2">
         <page string="Sale" col="2" id="sale">
             <label name="shop"/>
