--- a/view/sale_line_form.xml
+++ b/view/sale_line_form.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0"?>
-<!-- This file is part sale_pos module for Tryton.
-The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="POS Sale">
-    <label name="product"/>
-    <field name="product" colspan="3"/>
-    <label name="quantity"/>
-    <field name="quantity"/>
-    <label name="unit"/>
-    <field name="unit"/>
-    <label name="unit_price"/>
-    <field name="unit_price"/>
-    <label name="amount"/>
-    <field name="amount"/>
-    <label name="unit_price_w_tax"/>
-    <field name="unit_price_w_tax"/>
-    <label name="amount_w_tax"/>
-    <field name="amount_w_tax"/>
-    <label name="delivery_date"/>
-    <field name="delivery_date"/>
-    <field name="taxes" colspan="4" readonly="1"/>
-</form>
+<!-- This file is part of sale_pos module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full
+copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook/page/field[@name=&quot;amount&quot;]"
+            position="after">
+        <label name="unit_price_w_tax"/>
+        <field name="unit_price_w_tax"/>
+        <label name="amount_w_tax"/>
+        <field name="amount_w_tax"/>
+    </xpath>
+</data>
