--- a/view/sale_pos_form.xml
+++ b/view/sale_pos_form.xml
@@ -10,6 +10,8 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
             <field name="shop"/>
             <label name="reference"/>
             <field name="reference"/>
+            <label name="ticket_number"/>
+            <field name="ticket_number"/>
             <separator colspan="2" id="party_info"/>
             <label name="party"/>
             <field name="party"/>
