--- a/view/sale_pos_tree.xml
+++ b/view/sale_pos_tree.xml
@@ -4,6 +4,7 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
 <tree string="Pos Cash Sales">
     <field name="shop"/>
     <field name="reference"/>
+    <field name="ticket_number"/>
     <field name="create_date"/>
     <field name="sale_date"/>
     <field name="party"/>
