--- a/view/sale_pos_tree.xml
+++ b/view/sale_pos_tree.xml
@@ -8,8 +8,8 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
     <field name="pos_create_date"/>
     <field name="sale_date"/>
     <field name="party"/>
-    <field name="untaxed_amount"/>
-    <field name="total_amount"/>
+    <field name="untaxed_amount" sum="Untaxed Amount"/>
+    <field name="total_amount" sum="Total Amount"/>
     <field name="paid_amount"/>
     <field name="residual_amount"/>
     <field name="state"/>
