--- a/view/add_product_form.xml
+++ b/view/add_product_form.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="Add product">
-    <label name="product"/>
-    <field name="product" colspan="3"/>
-    <label name="quantity"/>
-    <field name="quantity"/>
-    <label name="unit"/>
-    <field name="unit"/>
-    <label name="unit_price"/>
-    <field name="unit_price"/>
+<form string="Add products">
+    <field name="lines" colspan="4"
+        view_ids="sale_pos.sale_line_view_tree,sale.sale_line_view_form"/>
 </form>
