--- a/view/sale_line_tree.xml
+++ b/view/sale_line_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree string="Lines" editable="bottom">
+<tree string="Lines" sequence="sequence" editable="bottom">
     <field name="product"/>
     <field name="quantity"/>
     <field name="unit"/>
