--- a/view/sale_pos_form.xml
+++ b/view/sale_pos_form.xml
@@ -77,13 +77,13 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
         </page>
     </notebook>
     <group id="cash" colspan="2">
-        <button name="wizard_add_product" string="_Add Products"
+        <button name="wizard_add_product" string="Add Products"
             icon="tryton-list-add"/>
-        <button name="add_sum" string="Add _Sum"
+        <button name="add_sum" string="Add Sum"
             icon="tryton-list-add"/>
-        <button name="wizard_sale_payment" string="_Pay"
+        <button name="wizard_sale_payment" string="Pay"
             icon="tryton-go-next"/>
-        <button name="print_ticket" string="_Ticket"
+        <button name="print_ticket" string="Ticket"
             icon="tryton-print"/>
     </group>
     <label name="state"/>
