--- a/view/sale_pos_form.xml
+++ b/view/sale_pos_form.xml
@@ -10,10 +10,12 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
             <field name="shop"/>
             <label name="sale_device"/>
             <field name="sale_device"/>
-            <label name="reference"/>
-            <field name="reference"/>
+            <label name="number"/>
+            <field name="number"/>
             <label name="ticket_number"/>
             <field name="ticket_number"/>
+            <label name="reference"/>
+            <field name="reference"/>
             <separator colspan="2" id="party_info"/>
             <label name="party"/>
             <field name="party"/>
