--- a/view/sale_pos_tree.xml
+++ b/view/sale_pos_tree.xml
@@ -3,8 +3,9 @@
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <tree string="Pos Cash Sales">
     <field name="shop"/>
-    <field name="reference"/>
+    <field name="number"/>
     <field name="ticket_number"/>
+    <field name="reference"/>
     <field name="pos_create_date" widget="date"/>
     <field name="pos_create_date" widget="time" string="Time"/>
     <field name="sale_date"/>
