--- a/view/sale_pos_tree.xml
+++ b/view/sale_pos_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree string="Pos Cash Sales">
+<tree>
     <field name="shop"/>
     <field name="number"/>
     <field name="ticket_number"/>
