--- a/view/pos_device_form.xml
+++ b/view/pos_device_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="POS Device Configuration" col="4">
+<form col="4">
     <label name="name"/>
     <field name="name"/>
     <label name="shop"/>
