--- a/view/pos_device_tree.xml
+++ b/view/pos_device_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree string="POS Device Configuration">
+<tree>
     <field name="name"/>
     <field name="shop"/>
     <field name="company"/>
