--- a/view/sale_pos_form.xml
+++ b/view/sale_pos_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="Pos Cash Sales" col="4">
+<form col="4">
     <field name="lines" colspan="2"
         view_ids="sale_pos.sale_line_view_tree,sale.sale_line_view_form"/>
     <notebook colspan="2">
