--- a/view/sale_pos_form.xml
+++ b/view/sale_pos_form.xml
@@ -4,7 +4,7 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
 <form col="4">
     <field name="lines" colspan="2"
         view_ids="sale_pos.sale_line_view_tree,sale.sale_line_view_form"/>
-    <notebook id="sale_notebook" colspan="2">
+    <notebook colspan="2">
         <page string="Sale" col="2" id="sale">
             <label name="shop"/>
             <field name="shop"/>
