--- a/view/sale_line_tree.xml
+++ b/view/sale_line_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree sequence="sequence" editable="bottom">
+<tree sequence="sequence" editable="1">
     <field name="product" view_ids="sale.product_view_list_sale_line"/>
     <field name="quantity"/>
     <field name="unit"/>
