--- a/view/sale_pos_tree.xml
+++ b/view/sale_pos_tree.xml
@@ -16,5 +16,5 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
     <field name="residual_amount"/>
     <field name="state"/>
     <field name="invoice_state"/>
-    <field name="currency_digits" tree_invisible="1"/>
+    <field name="currency" tree_invisible="1"/>
 </tree>
