--- a/view/sale_line_margin_view.xml
+++ b/view/sale_line_margin_view.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name=&quot;unit&quot;]"
+    <xpath expr="/tree/field[@name='unit']"
             position="after">
         <field name="cost_price" tree_invisible="1"/>
     </xpath>
