--- a/view/sale_pos_payment_type_form.xml
+++ b/view/sale_pos_payment_type_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page/field[@name=&quot;payments&quot;]"
+    <xpath expr="/form/notebook/page/field[@name='payments']"
             position="before">
         <label name="payment_type"/>
         <field name="payment_type"/>
