--- a/view/sale_shipment_cost_line_tree.xml
+++ b/view/sale_shipment_cost_line_tree.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name=&quot;unit_price&quot;]"
+    <xpath expr="/tree/field[@name='unit_price']"
             position="after">
         <field name="shipment_cost" tree_invisible="1"/>
     </xpath>
