--- a/view/add_product_form.xml
+++ b/view/add_product_form.xml
@@ -8,5 +8,5 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
     <label name="last_product" />
     <field name="last_product" colspan="3"/>
     <field name="lines" colspan="4"
-        view_ids="sale_pos.sale_line_view_tree,sale.sale_line_view_form"/>
+        view_ids="sale_pos.sale_line_view_tree_no_editable,sale.sale_line_view_form"/>
 </form>
