Set shipment_cost_method to none when has self_pick_up #163831

--- a/view/sale_pos_carrier_form.xml
+++ b/view/sale_pos_carrier_form.xml
@@ -7,5 +7,7 @@ copyright notices and license terms. -->
             position="after">
         <label name="carrier"/>
         <field name="carrier"/>
+        <label name="shipment_cost_method"/>
+        <field name="shipment_cost_method"/>
     </xpath>
 </data>
