--- a/view/add_product_form.xml
+++ b/view/add_product_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part sale_pos module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form cursor="input_valu">
+<form cursor="input_value">
     <label name="input_value"/>
     <field name="input_value" colspan="3"/>
 
